--- a/projeto3/style.css
+++ b/projeto3/style.css
@@ -17,7 +17,7 @@ body{
 
 .texto{
     display: inline-block;
-    width:50%;
+    width:35%;
     margin: 25px 0 0 50px;
     
 }
@@ -40,17 +40,14 @@ h1 em {
 
 h2{
     font-family: url(https://fonts.google.com/specimen/Inter#standard-styles);
-    font-size: 13px;
-    padding-top: 2.2em;
+    font-size: 1.1em;
+    margin: 2.2em auto 0.4em;
+    line-height: 1.2em;
     color: hsla(0, 0%, 100%, 0.75);
     
 }
 
-h2 p{
 
-    margin-bottom: 0.4em;
-
-}
 .first{ 
     font-size: 20px;
     display: inline-block;
@@ -88,10 +85,12 @@ h2 p{
 }
 .imgpeople{
     opacity: 40%;
-    width: 44%;
+    width: 42%;
+    margin-left: 165px;
     border-radius: 5px;
     vertical-align: top;
     display: inline-block;
+    background: white;
 
 }
 
@@ -120,4 +119,9 @@ footer a:active{
 
     color: black;
 
+}
+/* início do responsivo*/
+
+@media screen and (max-width:480px) {
+    
 }
